samples/_failures_safe/1761315259_ac90fc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e8eddd6a.c: In function ‘main’:
./samples/SAFE/__tmp_e8eddd6a.c:156:19: error: expected ‘;’ at end of input
  156 |             printf
      |                   ^
      |                   ;
./samples/SAFE/__tmp_e8eddd6a.c:156:13: error: expected declaration or statement at end of input
  156 |             printf
      |             ^~~~~~
./samples/SAFE/__tmp_e8eddd6a.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e8eddd6a.c:156:13: error: expected declaration or statement at end of input
